Add timestamp to FormalMotivation